speaker segment backend and partial frontend
